--- a/index.html
+++ b/index.html
@@ -650,68 +650,85 @@
       return day === 0 || day === 6; // 0 = Воскресенье, 6 = Суббота
     }
 
-    // === Форматирование и обработка номера телефона ===
-    function formatPhoneNumberOnInput(inputElement) {
-        const digits = inputElement.value.replace(/\D/g, ''); // Оставляем только цифры
-        let formattedValue = '';
-
-        // Убираем лидирующую 8, если есть, заменяем на 7
-        // Или если начинается не с 7, но есть цифры - добавляем 7
-        let cleanDigits = digits;
-        if (digits.startsWith('8')) {
-            cleanDigits = '7' + digits.substring(1);
-        } else if (digits.length > 0 && !digits.startsWith('7')) {
-            // Если введено что-то, но не 7 или 8 - возможно, просто код оператора? Добавляем 7
-            // Либо если вставлен номер без кода страны
-            cleanDigits = '7' + digits;
-        }
-
-        // Обрезаем до 11 цифр (7 + 10 для номера)
-        cleanDigits = cleanDigits.substring(0, 11);
-
-        const match = cleanDigits.match(/(\d{1})?(\d{0,3})?(\d{0,3})?(\d{0,2})?(\d{0,2})?/);
-
-        if (match) {
-            formattedValue = '+7 (';
-            if (match[2]) {
-                formattedValue += match[2];
-            }
-            if (match[3]) {
-                formattedValue += ') ' + match[3];
-            }
-            if (match[4]) {
-                formattedValue += '-' + match[4];
-            }
-            if (match[5]) {
-                formattedValue += '-' + match[5];
-            }
-        }
-
-        // Предотвращаем установку пустого "+7 (" без цифр, кроме как при blur
-        if (digits.length > 0) {
-             inputElement.value = formattedValue;
-        } else {
-             // Если все цифры удалены, очищаем поле (placeholder вернется на blur)
-             inputElement.value = '';
-        }
+    // БЕЗОПАСНАЯ функция форматирования даты в 'YYYY-MM-DD' без учета часовых поясов
+    function formatDateSafe(date) {
+      const year = date.getFullYear();
+      // getMonth() возвращает 0-11, добавляем 1 и дополняем нулем если нужно
+      const month = (date.getMonth() + 1).toString().padStart(2, '0');
+      // getDate() возвращает 1-31, дополняем нулем если нужно
+      const day = date.getDate().toString().padStart(2, '0');
+      return `${year}-${month}-${day}`;
     }
 
-    // Обработчики focus и blur для поля телефона
-    clientPhoneInput.addEventListener('focus', (e) => {
-        if (e.target.value === '+7 (') {
+    // Улучшенная маска и обработчики для телефона
+    const phonePlaceholder = '+7 (';
+
+    clientPhoneInput.addEventListener('input', function(e) {
+        const input = e.target;
+        const value = input.value;
+        const cursorPosition = input.selectionStart;
+
+        // Удаляем все нецифровые символы
+        let digits = value.replace(/\D/g, '');
+
+        // Обработка префикса +7 или 8 при вставке или быстром наборе
+        if ((value.startsWith('+7') || value.startsWith('8')) && digits.length > 10) {
+            if (digits.startsWith('7') || digits.startsWith('8')) {
+                 digits = digits.substring(1);
+            }
+        }
+        
+        // Обрезаем до 10 цифр (после кода страны)
+        digits = digits.substring(0, 10);
+
+        let formattedValue = phonePlaceholder;
+        if (digits.length > 0) {
+            formattedValue += digits.substring(0, 3);
+        }
+        if (digits.length >= 4) {
+            formattedValue += ') ' + digits.substring(3, 6);
+        }
+        if (digits.length >= 7) {
+            formattedValue += '-' + digits.substring(6, 8);
+        }
+        if (digits.length >= 9) {
+            formattedValue += '-' + digits.substring(8, 10);
+        }
+
+        input.value = formattedValue;
+
+        // Восстанавливаем позицию курсора (с поправкой на добавленные символы маски)
+        // Это примерная логика, точное восстановление курсора сложно
+        if (cursorPosition !== null) {
+            // Пытаемся угадать новую позицию, это может быть неточно
+            let newCursorPosition = cursorPosition;
+            if (value.length < formattedValue.length) {
+                // Если символы были добавлены маской, сдвигаем курсор
+                 if (cursorPosition > 4 && digits.length >= 3) newCursorPosition++; // после ')'
+                 if (cursorPosition > 5 && digits.length >= 3) newCursorPosition++; // после ' '
+                 if (cursorPosition > 9 && digits.length >= 6) newCursorPosition++; // после '-'
+                 if (cursorPosition > 12 && digits.length >= 8) newCursorPosition++; // после '-'
+            }
+            // Ограничиваем позицию длиной строки
+            newCursorPosition = Math.min(newCursorPosition, formattedValue.length);
+             // Ставим курсор в предсказанное место (может требовать доработки)
+            // requestAnimationFrame чтобы установка сработала после обновления value браузером
+             requestAnimationFrame(() => {
+                 input.setSelectionRange(newCursorPosition, newCursorPosition);
+            });
+        }
+    });
+
+    clientPhoneInput.addEventListener('focus', function(e) {
+        if (e.target.value === phonePlaceholder) {
             e.target.value = '';
         }
     });
 
-    clientPhoneInput.addEventListener('blur', (e) => {
-        if (e.target.value === '' || e.target.value === '+') {
-            e.target.value = '+7 (';
+    clientPhoneInput.addEventListener('blur', function(e) {
+        if (e.target.value === '') {
+            e.target.value = phonePlaceholder;
         }
-    });
-
-    // Обновленный обработчик input для телефона
-    clientPhoneInput.addEventListener('input', (e) => {
-        formatPhoneNumberOnInput(e.target);
     });
 
     // Получить дату понедельника и воскресенья для недели, содержащей date
@@ -2241,16 +2258,6 @@
         if (!hasData) {
             weeklyPayrollResultsEl.innerHTML = '<p class="italic text-yellow-600">Нет начислений за прошлую неделю.</p>';
         }
-    }
-
-    // БЕЗОПАСНАЯ функция форматирования даты в 'YYYY-MM-DD' без учета часовых поясов
-    function formatDateSafe(date) {
-      const year = date.getFullYear();
-      // getMonth() возвращает 0-11, добавляем 1 и дополняем нулем если нужно
-      const month = (date.getMonth() + 1).toString().padStart(2, '0');
-      // getDate() возвращает 1-31, дополняем нулем если нужно
-      const day = date.getDate().toString().padStart(2, '0');
-      return `${year}-${month}-${day}`;
     }
 
   </script>
