--- a/index.html
+++ b/index.html
@@ -111,6 +111,100 @@
       /* color: rgba(255, 255, 255, 0.8); */ /* Делаем цену такой же, как основной текст */
       color: white;
     }
+
+    /* Стили для контейнера тегов услуг */
+    #servicesContainer {
+        display: flex; /* По умолчанию для мобильных - flex в строку */
+        overflow-x: auto; /* Горизонтальная прокрутка */
+        white-space: nowrap; /* Запрет переноса тегов на новую строку */
+        padding-bottom: 10px; /* Отступ для полосы прокрутки */
+        gap: 10px; /* Промежуток между тегами */
+    }
+
+    /* Стили для тегов-кнопок услуг (базовые + мобильные) */
+    .service-tag {
+      /* display: inline-flex; */ /* Убрано */
+      display: inline-block; /* Чтобы теги шли в строку, но контент внутри мог быть блочным */
+      flex-direction: column;
+      /* align-items: center; */ /* Убрано, текст выровняем по центру */
+      /* padding: 8px 16px; */
+      padding: 12px 10px; /* Немного изменил отступы */
+      border-radius: 14px; /* Чуть менее круглые */
+      background-color: #f5f5f7;
+      color: #1d1d1f;
+      font-weight: 500;
+      border: 1px solid #e5e5e5;
+      cursor: pointer;
+      transition: all 0.2s ease;
+      user-select: none;
+      text-align: center; /* Выравнивание текста по центру */
+      /* min-width: 110px; */ /* Убрано, используем фиксированную ширину */
+      width: 120px; /* Фиксированная ширина для мобильных */
+      min-height: 70px; /* Минимальная высота для единообразия */
+      vertical-align: top; /* Выравнивание тегов по верху, если они разной высоты */
+    }
+
+    /* Убираем лишние стили для иконки внутри тега */
+    .service-tag i {
+       /* font-size: 14px; */ /* Удалено */
+       margin-bottom: 0; /* Удалено */
+       margin-right: 0; /* Удалено */
+    }
+
+    /* Стили для первой строки (иконка + название) */
+    .service-tag-line1 {
+        display: flex;        /* Иконка и текст в строку */
+        align-items: center;  /* Выравнивание по вертикали */
+        justify-content: center; /* Выравнивание по горизонтали */
+        margin-bottom: 4px;   /* Отступ снизу до цены */
+        font-size: 13px;      /* Размер шрифта названия */
+    }
+    .service-tag-line1 i {
+        font-size: 16px;    /* Размер иконки */
+        margin-right: 6px;  /* Отступ иконки справа */
+    }
+
+    /* Стили для строки с ценой */
+    .service-tag-price {
+      font-size: 12px;
+      color: #6e6e73; /* Вторичный цвет текста Apple */
+    }
+
+    .service-tag:hover {
+      background-color: #e5e5e5;
+    }
+
+    .service-tag.selected {
+      background-color: #007aff;
+      color: white;
+      border-color: #007aff;
+    }
+
+    .service-tag.selected:hover {
+      background-color: #0062cc;
+    }
+
+    .service-tag.selected .service-tag-price {
+      /* color: rgba(255, 255, 255, 0.8); */ /* Делаем цену такой же, как основной текст */
+      color: white;
+    }
+
+    /* Адаптивные стили для десктопа (ширина > 768px) */
+    @media (min-width: 768px) {
+        #servicesContainer {
+            flex-wrap: wrap; /* Разрешаем перенос тегов */
+            overflow-x: visible; /* Убираем горизонтальную прокрутку */
+            white-space: normal; /* Возвращаем нормальный перенос */
+            padding-bottom: 0; /* Убираем отступ для прокрутки */
+            gap: 15px; /* Можно увеличить промежуток */
+        }
+
+        .service-tag {
+             width: auto; /* Ширина определяется контентом и flex-wrap */
+             min-width: 130px; /* Минимальная ширина на десктопе */
+             min-height: auto; /* Высота по контенту */
+        }
+    }
   </style>
 </head>
 <body>
