--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
       .service-tag:last-child {
         margin-bottom: 0; /* Убираем отступ у последнего тега */
       }
+
+      /* Убедимся, что цена тоже центрируется */
+      .service-tag-price {
+          text-align: center;
+      }
     }
   </style>
 </head>
