--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
       }
 
       bookingIdInput.value = ''; // Сброс ID для нового бронирования
-      modalTitle.textContent = 'Добавить запись клиента';
+      modalTitle.textContent = 'Карточка клиента';
       deleteBookingBtn.classList.add('hidden'); // Скрыть кнопку удаления
       bookingForm.reset(); // Сбросить форму
       clientPhoneInput.value = '+7 ('; // Установить маску по умолчанию
